--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 /target
+Cargo.lock
+
+# codegen
+# must be in sync with rustfmt.toml
+src/loc_name/gen.rs
+src/nodes/types/*.rs
+src/nodes/node_enum.rs
+src/error/messages/message_enum.rs
+src/traverse/visitor/visit_gen.rs
+src/traverse/finder/finder_gen.rs
