--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "lib-ruby-parser-ast"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = []
+codegen = ["lib-ruby-parser-nodes"]
 
 [dependencies]
+
+[build-dependencies]
+lib-ruby-parser-nodes = { optional = true, version = "0.55.0" }
